hphp/hack/test/typecheck/shape_usage_with_optional_field.php.exp
File "shape_usage_with_optional_field.php", line 4, characters 4-4:
An expression is expected here. (Parsing[1002])
