hphp/hack/test/typecheck/shape_usage_with_optional_field.php
<?hh

$x = shape(
  ?'a' => 42
);
